# windy-app-assessment

./: .gitignore  README.md  pyproject.toml
fixtures/bz2/: icon-d2_germany_icosahedral_single-level_2023112312_000_2d_tot_prec.grib2.bz2
fixtures/grib2/: icon-d2_germany_icosahedral_single-level_2023112312_000_2d_tot_prec.grib2  icon-d2_germany_icosahedral_single-level_2023112312_000_2d_tot_prec.grib2.923a8.idx
windy_app_assessment/: .env.TEMPLATE  pull_grib2_files.py
