[tool.poetry]
name = "windy-app-assessment"
version = "0.1.0"
description = ""
authors = ["dizpers <dizpers@gmail.com>"]
readme = "README.md"
packages = [{include = "windy_app_assessment"}]

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.11.0"
cfgrib = "^0.9.10.4"
ipython = "^8.17.2"
eccodes = "^1.6.1"
environs = "^9.5.0"
bs4 = "^0.0.1"
aiorun = "^2023.7.2"
aiohttp = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
